--- a/docs/guides/server/db.adoc
+++ b/docs/guides/server/db.adoc
@@ -128,6 +128,8 @@ Then continue configuring the database as described in the next section.
 
 For each supported database, the server provides some opinionated defaults to simplify database configuration. You complete the configuration by providing some key settings such as the database host and credentials.
 
+WARNING: The examples include the minimum settings needed to connect to the database but it exposes the database password and is not recommended. Sensitive values should not be directly used on the CLI. At a minimum should be in the `conf/keycloak.conf` - the use of environment variables or an encrypted keystore is preferred.
+
 The configuration can be set during a `build` command OR a `start` command:
 
 . Using a `build` command followed by an optimized `start` command (recommended)
@@ -160,8 +162,6 @@ bin/kc.[sh|bat] start --optimized
 . Using *only a `start`* command (without `--optimized`)
 +
 <@kc.start parameters="--db postgres --db-url-host keycloak-postgres --db-username keycloak --db-password change_me"/>
-
-WARNING: The examples above include the minimum settings needed to connect to the database but it exposes the database password and is not recommended. Use the `conf/keycloak.conf` as shown above, environment variables, or keystore for at least the password.
 
 The default schema is `keycloak`, but you can change it by using the `db-schema` configuration option.
 
